<resources>
    <string name="app_name">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home_title">Home</string>
    <string name="menu_all_title">All Songs</string>
    <string name="menu_favourite_title">Favourite Songs</string>
    <string name="menu_deivce_title">Device Songs</string>

    <string name="title_favourite">Favourite Songs</string>
    <string name="title_all">All Songs</string>
    <string name="title_home">Home</string>
    <string name="title_device">Device Songs</string>
    <string name="title_player">Music Player</string>

    <string name="button_all_name">Play All</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is channel 1</string>
    <string name="dev_name">VuongVanDuy</string>

    <string name="hint_search">Song name...</string>
</resources>