<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AllMusicFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_action_bar"
        android:background="@color/blueLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_all"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title_action_bar"
            android:layout_centerInParent="true"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/bt_play_all"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_all_name"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:background="@drawable/layout_button_play_all"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_search"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_search"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:drawableEnd="@drawable/ic_clear" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_list_songs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

</LinearLayout>